results/SpecGenBench/4-shot/log-PowerOfFourLoop-2023_11_28_00_49_33.txt
class PowerOfTwoLoop {
    //@ ensures \result <==> n > 0 && (\forall int i; n % 4 == 0; n /= 4) && n == 1;
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n % 4 == 0 ==> n > 0;
        //@ decreases n;
        while (n % 4 == 0) {
            n /= 4;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfFourLoop.java:2: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result <==> n > 0 && (\forall int i; n % 4 == 0; n /= 4) && n == 1;
                                                                    ^
1 error

